@@ -40,3 +40,4 @@ r48 find/replace error, fix for keybindings hopefully, localization update
 r49 just testing some stuff like borders and horizontal direction
 r50 closer to getting borders working. bars switch direction finally, but only on /rl. working on that
 r51 textures, direction, hiding icon all working. added icon position, commented out borders for now
+r52 experiment with icon position failed, removing option
